FIXES: CardCourses title overflow hidden

--- a/src/components/Card/CardCourse.scss
+++ b/src/components/Card/CardCourse.scss
@@ -6,3 +6,9 @@ img {
 #descripcion {
   height: 4rem;
 }
+
+.card-title {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
